--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </ul>
       </nav>
     </div>
-      <div><button class="theme-switcher"></button>
+      <div><button class="theme-switcher"></button> 
         <p class="header-greating">Вітаємо, User!</p>
       </div>
    
@@ -51,7 +51,8 @@
       <p>Вітаю, ви вгадали число! (number)</p>
     </div>
   </section>
-  <section class="rock-scissor-paper">
+  <include src="partials/rock-scissor-paper.html"></include>
+  <!-- <section class="rock-scissor-paper">
     <div class="container">
       <h2 class="rock-scissor-paper-title">Камінь - ножиці - папір</h2>
       <div class="button-box">
@@ -67,7 +68,7 @@
       <p>Ви виграли раунд!</p>
       <button class="primary-button"></button>
     </div>
-  </section>
+  </section> -->
   <section>
     <h2>Калькулятор</h2>
     <input type="number">
