--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,6 @@
   <include src="partials/3-numbers.html"></include>
 </main>
   <include src="partials/footer.html"></include>
+  <script src="js/3numbers.js"></script>
 </body>
 </html>
