add: css and files

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,13 @@
 </div>
 <include src="partials/birthday.html"></include>
   <include src="partials/rock-scissor-paper.html"></include>
-  <section><h2>Google динозавр</h2></section>
-  <section><h2>Футбол</h2></section>
+  <section>
+    <h2>Google динозавр</h2></section>
+  <section>
+    <h2 class="football-title">Футбол</h2>
+  </section>
   <include src="partials/3-numbers.html"></include>
+  <include src="partials/our-team.html"> </include>
 </main>
   <include src="partials/footer.html"></include>
   <script src="js/3numbers.js"></script>
