--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,6 @@
   <include src="partials/our-team.html"> </include>
 </main>
   <include src="partials/footer.html"></include>
-  <script src="js/3numbers.js"></script>
+  <!-- <script src="js/3numbers.js"></script> -->
 </body>
 </html>
