--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
 <include src="partials/birthday.html"></include>
   <include src="partials/rock-scissor-paper.html"></include>
   <section>
-    <h2>Google динозавр</h2></section>
+    <h2>Google динозавр</h2>
+    <include src="partials/dino-game.html"></include>
+  </section>
   <section>
     <h2 class="football-title">Футбол</h2>
   </section>
