--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     <div class="main-title-wrapper">
   <h1 class="hero-title">Популярні інтерактивні ігри</h1>
 </div>
-<include src="partials/birthday.html"></include>
+<section>
+  <include src="partials/birthday.html"></include>
+</section>
   <include src="partials/rock-scissor-paper.html"></include>
   <section>
     <h2>Google динозавр</h2>
