add: football section

--- a/src/index.html
+++ b/src/index.html
@@ -21,18 +21,20 @@
     <section>
       <h2>Google динозавр</h2>
     </section>
-    <section>
+    <section class="football-wrapper">
+     
       <h2 class="football-title">Футбол</h2>
       <div class="football-field">
-        <div id="ball"></div>
+        <div class="football"></div>
       </div>
-      
     </section>
     <include src="partials/3-numbers.html"></include>
     <include src="partials/our-team.html"> </include>
   </main>
   <include src="partials/footer.html"></include>
-  <!-- <script src="js/3numbers.js"></script> -->
+ <script src="js/3numbers.js"></script> 
+ <script src="js/football.js"></script>
+
 </body>
 
 </html>
