new section and really small fix

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <h1 class="hero-title">Популярні інтерактивні ігри</h1>
     </div>
     <include src="partials/birthday.html"></include>
+    <include src="partials/computerGuessed.html"></include>
     <include src="partials/rock-scissor-paper.html"></include>
     <include src="partials/Calculator.html"></include>
     <section>
