--- a/src/index.html
+++ b/src/index.html
@@ -11,29 +11,36 @@
 
 <body>
   <include src="partials/header.html"></include>
-  <main>
+  <main class="games-container">
     <div class="main-title-wrapper">
-      <h1 class="hero-title">Популярні інтерактивні ігри</h1>
-    </div>
-    <include src="partials/birthday.html"></include>
-    <include src="partials/computerGuessed.html"></include>
-    <include src="partials/rock-scissor-paper.html"></include>
-    <include src="partials/Calculator.html"></include>
-    <section>
-      <h2>Google динозавр</h2>
-    </section>
-    <section>
-      <h2 class="football-title">Футбол</h2>
+  <h1 class="hero-title">Популярні інтерактивні ігри</h1>
+</div>
+  <include src="partials/birthday.html"></include>
+
+  <include src="partials/rock-scissor-paper.html"></include>
+<include src="partials/Calculator.html" ></include>
+  <section>
+    <h2>Google динозавр</h2>
+    <include src="partials/dino-game.html"></include>
+  </section>
+  <section>
+    <h2 class="football-title">Футбол</h2>
+    <div class="football-section">
       <div class="football-field">
-        <div id="ball"></div>
+        <div class="football"></div>
       </div>
-      
-    </section>
-    <include src="partials/3-numbers.html"></include>
-    <include src="partials/our-team.html"> </include>
-  </main>
+    </div>
+
+  </section>
+  <include src="partials/3-numbers.html"></include>
+  <include src="partials/our-team.html"> </include>
+</main>
+
   <include src="partials/footer.html"></include>
-  <!-- <script src="js/3numbers.js"></script> -->
+ <script src="js/3numbers.js"></script> 
+ <script src="js/football.js"></script>
+ <script src="js/Calculator.js"></script>
+
 </body>
 
 </html>
