--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
   </section>
   <include src="partials/3-numbers.html"></include>
   <include src="partials/our-team.html"> </include>
+  <include src="partials/sientiest.html"> </include>
 </main>
 
   <include src="partials/footer.html"></include>
