--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Page title</title>
   <link rel="stylesheet" href="./sass/index.scss" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <script type="module" src="./index.js"></script>
+ 
 </head>
 
 <body>
@@ -26,12 +30,15 @@
     <include src="partials/dino-game.html"></include>
   </section>
   <section>
+    <hr class="line" style="background-color: black; height: 1px;  width: 536px">
+    <div class="football-wrap">
     <h2 class="football-title">Футбол</h2>
     <div class="football-section">
       <div class="football-field">
         <div class="football"></div>
       </div>
     </div>
+  </div>
 
   </section>
   <include src="partials/3-numbers.html"></include>
@@ -40,10 +47,9 @@
 </main>
 
   <include src="partials/footer.html"></include>
- <script src="js/3numbers.js"></script> 
- <script src="js/football.js"></script>
- <script src="js/Calculator.js"></script>
-
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="/src/js/slick.min.js" type="module"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 
 </html>
