Add: fixes football and rock scissor paper section

--- a/src/index.html
+++ b/src/index.html
@@ -29,18 +29,7 @@
   <section>
     <include src="partials/dino-game.html"></include>
   </section>
-  <section>
-    <hr class="line" style="background-color: black; height: 1px;  width: 536px">
-    <div class="football-wrap">
-    <h2 class="football-title">Футбол</h2>
-    <div class="football-section">
-      <div class="football-field">
-        <div class="football"></div>
-      </div>
-    </div>
-  </div>
-
-  </section>
+ <include src="partials/football.html" ></include>
   <include src="partials/3-numbers.html"></include>
   <include src="partials/our-team.html"> </include>
   <include src="partials/sientiest.html"> </include>
